# authx-extra

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
authx_extra/: __init__.py  cache.py  oauth2.py  session.py
authx_extra/addons/: expiry.py  keys.py
authx_extra/extra/: _cache.py
requirements/: all.txt  linting.in  linting.txt  optional.in  optional.txt  pyproject.in  pyproject.txt  testing.in  testing.txt
scripts/: docker.sh  lint.sh  requirements.sh
tests/: authx_profiling_results.html  authx_profiling_results.json  test_cache.py  test_keys.py  test_method_cache.py  test_metrics.py  test_oauth2.py  test_profiler.py  test_session_middleware.py  test_skip_session_header_check_dict.py  test_skip_session_header_check_list.py
tests/extra/: test_memory.py
